--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "pino": "^10.2.1",
     "qrcode-terminal": "^0.12.0",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@express-rate-limit/tsconfig": "^1.0.2"
   }
 }
